test/testData/parser/positive/statements/continue.err
test/testData/parser/positive/statements/continue.c:11:23: error: 'continue' statement not in loop statement
